--- a/accordion.html
+++ b/accordion.html
@@ -1,6 +1,6 @@
 <head>
   ...
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="public/styles/main.css">
 </head>
 
 <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
